...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XaV-C9-FNP">
                                        <rect key="frame" x="0.0" y="0.0" width="333" height="49"/>
                                        <accessibility key="accessibilityConfiguration" identifier="landingPageSignInButton"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Sign In">
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K2Q-oB-ywh">
                                        <rect key="frame" x="0.0" y="74" width="333" height="49"/>
                                        <accessibility key="accessibilityConfiguration" identifier="landingPageRegisterButton"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Register">
...
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2ga-fm-wGT">
                                        <rect key="frame" x="0.0" y="30.333333333333314" width="333" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="registerEmailTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OAh-U4-BdA">
                                        <rect key="frame" x="0.0" y="74.333333333333314" width="333" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="registerPasswordTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k09-pQ-vtH">
                                        <rect key="frame" x="0.0" y="118.33333333333331" width="333" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="confirmPasswordTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nxh-mo-C1k">
                                        <rect key="frame" x="0.0" y="192.66666666666663" width="333" height="34.333333333333343"/>
                                        <accessibility key="accessibilityConfiguration" identifier="registerButton"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Register"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hOG-nG-AKG">
                                        <rect key="frame" x="0.0" y="30.333333333333314" width="333" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="signInEmailTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pqk-D6-cM0">
                                        <rect key="frame" x="0.0" y="74.333333333333314" width="333" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="signInPasswordTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JhL-A9-Dem">
                                        <rect key="frame" x="0.0" y="148.66666666666663" width="333" height="34.333333333333343"/>
                                        <accessibility key="accessibilityConfiguration" identifier="signInButton"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Sign In"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KPG-lL-jjB">
                                <rect key="frame" x="30" y="408.66666666666669" width="333" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="signOutButton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Sign Out"/>
...
